fixed menu item spacing

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 
 .overlay {
   position: fixed;
-  top: 0;
+  top: 50px;
   left: 0;
   width: 50%;
   height: 0%;
